# asconnect

./: .gitignore  README.md  azure-pipelines.yml  pylintrc  pyproject.toml  requirements.txt  stylecheck.sh  test.sh
.azure/: publish.yml
.github/workflows/: lint.yml  main.yml  publish.yml
asconnect/: __init__.py  altool.py  app_client.py  app_info_client.py  beta_review_client.py  build_client.py  client.py  exceptions.py  httpclient.py  itms.py  reviews_client.py  screenshot_client.py  sorting.py  users_client.py  utilities.py  version_client.py
asconnect/models/: __init__.py  app_info.py  app_store.py  app_store_version_localizations.py  apps.py  beta_app_review.py  beta_detail.py  beta_groups.py  builds.py  common.py  idfa.py  localization.py  reviews.py  screenshots.py  submission.py  users.py
tests/: __init__.py  conftest.py  test_altool.py  test_apps.py  test_asconnect.py  test_basics.py  test_beta_review.py  test_builds.py  test_reviews.py  test_screenshots.py  test_users.py  test_versions.py
