[tool.poetry]
name = "asconnect"
version = "6.0.1"
description = "A wrapper around the Apple App Store Connect APIs"

license = "MIT"

authors = ["Dale Myers <dalemyers@microsoft.com>"]

readme = 'README.md'

repository = "https://github.com/microsoft/asconnect"
homepage = "https://github.com/microsoft/asconnect"

keywords = ['apple', 'app store', 'itunes', 'connect']

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development',
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "^3.11"
cryptography = ">=40,<43"
deserialize = "^2.0.1"
pyjwt = "^2.6.0"
requests = "^2.28.2"
tenacity = "^8.2.2"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
mypy = "1.15.0"
pylint = "3.3.5"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-dependency = "^0.5.1"
types-requests = "^2.28.11.16"

[[tool.mypy.overrides]]
module = ["deserialize"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
